--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,10 @@
     <title><%= title %></title>
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+	<script>
+	  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+	</script>
+	<script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
     <!-- Navigation -->
