--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-	<script>
-	  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-	</script>
-	<script defer src="/_vercel/insights/script.js"></script>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
     <!-- Navigation -->
@@ -439,7 +445,7 @@
                             </ul>
                         </div>
                         <div class="project-tech">
-							<span class="tech-tag">System Qulification Testing</span>
+							<span class="tech-tag">System Qualification Testing</span>
                             <span class="tech-tag">CAPL framework</span>
                             <span class="tech-tag">ISO-14229</span>
                             <span class="tech-tag">ECU Testing</span>
@@ -481,7 +487,7 @@
                 <div class="project-card">
                     <div class="project-content">
                         <h3 class="project-title">ADAS Feature Testing in dSpace HiL System</h3>
-                        <div class="project-company">Aptiv Compoments India Pvt. Ltd. Bengaluru, Karnataka</div>
+                        <div class="project-company">Aptiv Components India Pvt. Ltd. Bengaluru, Karnataka</div>
                         <div class="project-role">Senior Software Engineer, June 2021 – March 2025</div>
                         <p class="project-description">Comprehensive verification of ADAS L2/L2+ features and functionalities on Hardware-in-the-Loop (HiL) systems using IPG CarMaker, and dSpace Tools. Simulation of Vehicle dynamics and RADAR with scenario in a Virtual environment to engage the feature and verify the functionality and corner cases useful for the EURO NCAP guidelines. Build a custom in-house tools solution for the test environment.</p>
                         <div class="project-modules">
@@ -496,7 +502,7 @@
                             </ul>
                         </div>
                         <div class="project-tech">
-							<span class="tech-tag">HLL System Testing</span>
+							<span class="tech-tag">HIL System Testing</span>
                             <span class="tech-tag">dSpace Tools</span>
 							<span class="tech-tag">IPG Carmaker</span>
                             <span class="tech-tag">Vector Tools</span>
